# oil-rag-dra

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  terminology_analysis.py  terminology_bottleneck_analysis.py  terminology_sufficiency_analysis.py
New folder/: analyze_dra_performance.py  commercial_viability_analysis.py  dra_enhanced_rag.py  evaluate_dra_performance.py  evaluate_improved_generation.py  evaluate_qa_simple.py  f1_score_analysis.py  generate_final_report.py  generate_qa_dataset.py  improved_rag_generator.py  interactive_rag.py  smart_answer_generator.py  streamlit_app_simple.py  test_dra_system.py  test_rag_system.py
analysis/: llm_integration_analysis.py  project_architecture_overview.py
apps/api/: endpoints.py
apps/web/: streamlit_app.py
config/: config.py  data.yaml  model.yaml  settings.py  training.yaml
data/metadata/: report_pairs.csv
data/test/: test_qa.jsonl  test_qa_expanded.jsonl
docs/: DRA_Implementation_Report.md  QA_Dataset_Evaluation_Solution.md  project_architecture_overview.json
evaluation_results/: commercial_viability_analysis.json  dra_comprehensive_analysis.json  f1_improvement_analysis.json  improved_generation_results.json  llm_integration_analysis.json  plan_a_evaluation.json  simple_qa_results.json  terminology_integration_analysis.json
models/: document_embeddings.pkl
oil_rag/: __init__.py
oil_rag_dra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: retrieval_evaluation_enhanced.json  retrieval_evaluation_simple.json  universal_retrieval_evaluation.json
scripts/: create_test_queries.py  evaluate_retrieval_modes.py  evaluate_retrieval_plana.py  evaluate_retrieval_simple.py  evaluate_retrieval_universal.py  expand_relevant_docs.py  generate_qa_dataset.py
tests/: test_aligner.py  test_data_processing.py  test_dra.py  test_retriever.py
(+118 files in other folders)
